<resources>
    <string name="app_name">MealMonkey</string>
    <string name="title_feed">Feed</string>
    <string name="title_social">Social</string>
    <string name="title_account">Account</string>
    <string name="title_maps">Maps</string>
    <string name="error_getting_ubication">Error obtaining location</string>
    <string name="map_id" translatable="false">4fea3703476b8448</string>
    <string name="title_location_permission">Location permission</string>
    <string name="is_required_permission_location">This application does not need location permissions to operate, but they are required for this functionality.</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="unaviable_location_feature">The location feature is unavailable because this feature requires permission that you have denied. Please allow it from settings to proceed further</string>
    <string name="title_settings">Settings</string>
    <string name="title_locate">Locate</string>
    <string name="title_add_location">Add location</string>
    <string name="title_add">Add</string>
    <string name="title_name">Name</string>
    <string name="title_change_icon">Change icon</string>
    <string name="title_location">Location</string>
    <string name="title_tags">Tags</string>
    <string name="title_create_tag">Create tag</string>
    <string name="title_comment">Comment</string>
    <string name="title_phone">Phone</string>
    <string name="title_website">Website</string>
    <string name="title_web_article">Web article</string>
    <string name="title_save">Save</string>
    <string name="title_to_try">To try</string>
    <string name="title_tried">Tried</string>
    <string name="title_place">Place</string>
</resources>