<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="80dp"
    tools:context=".ui.maps.MapsFragment">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|start"
        map:mapId="@string/map_id"
        map:uiMapToolbar="false"
        map:uiTiltGestures="false"
        tools:ignore="FragmentTagUsage" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/title_locate"
        app:fabCustomSize="48dp"
        app:maxImageSize="24dp" />

    <Button
        android:id="@+id/fab_add_location"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:height="60dp"
        android:text="@string/title_add"
        android:textSize="16sp"
        android:contentDescription="@string/title_add_location"
        app:icon="@drawable/ic_add_24dp"
        app:iconSize="22dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>